<resources>
    <string name="app_name">Trainings Schedule</string>

    <string name="menu_schedule">Trainings Schedule</string>
    <string name="menu_info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Trainer App</string>
    <string name="nav_header_subtitle">Helps you with your schedule.</string>
    <string name="nav_header_desc">Navigation</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_trainings_schedule">Trainings Schedule</string>

    <!--Menu-->
    <string name="Delete">Delete</string>
    <string name="MoveExerciseUp">One Step Up</string>
    <string name="MoveExerciseDown">One Step Down</string>
    <string name="EditSchedule">Edit</string>

    <!--General-->
    <string name="DataFile" translatable="false">DataFile.xml</string>
    <string name="LineBreak" translatable="false">\n</string>
    <string name="NoNameError">Please give it a name.</string>

    <!--Info Activity-->
    <string name="InfoActivityTitle">Info</string>
    <string name="Copyright" translatable="false">Copyright 2019</string>
    <string name="ReservedFor" translatable="false">Moritz Herzog - German Software Engineers</string>
    <string name="LicenseShort">The software is published under the GPL V3. To view the license click on the button below.</string>
    <string name="LicenseButton">Take me to License</string>
    <string name="OtherLicenses">Licenses of used Parts</string>
    <string name="OpenGitHub">Open Github</string>

    <!--General Trainings Editor-->
    <string name="title_activity_general_training_schedule_editor">Add Trainigns Schedule</string>
    <string name="ScheduleNameHint">Name</string>
    <string name="TrainingsTypeTextView">Trainings Type:</string>
    <string name="RepetitionsTextView">Repetitions:</string>
    <string name="PauseTextView">Pause [s]:</string>
    <string name="SetsTextView">Sets:</string>
    <string name="MovementSpeedTextView">Movement Speed [s]:</string>
    <string name="ScheduleNameError">Please type a name in.</string>
    <string name="ScheduleColorLabel">Color:</string>

    <string-array name="ScheduleType">
        <item>strength endurance</item>
        <item>hypertrophy</item>
        <item>maximum strength</item>
        <item>pyramid training</item>
    </string-array>

    <string-array name="Intesities">
        <item>soft</item>
        <item>middle</item>
        <item>hard</item>
    </string-array>

    <string-array name="ExerciseTypes">
        <item>Warm Up Exercise</item>
        <item>Device Exercise</item>
        <item>Body Weight Exercise</item>
    </string-array>

    <!--Exercise View Activity-->
    <string name="BodyWeightExerciseAdditionalInformation">Additional Information: </string>

    <string name="DeviceExerciseSeat">Seat Position:</string>
    <string name="DeviceExerciseDeviceNumber">Device Number:</string>
    <string name="DeviceExerciseLeg">Leg Position:</string>
    <string name="DeviceExerciseFoot">Foot Position:</string>
    <string name="DeviceExerciseAngle">Angle Position:</string>
    <string name="DeviceExerciseBack">Back Position:</string>
    <string name="DeviceExerciseWeight">Weight: [kg]</string>
    <string name="DeviceExerciseAdditionalWeight">Additional Weight:</string>

    <string name="WarmUpExerciseTime">Time: [min.]</string>
    <string name="WarmUpExerciseIntensity">Intensity:</string>
    <string name="WamUpExerciseSubintensity">Sub-Intensity:</string>
    <string name="WarmUpExerciseHeartFrequency">Heart-Frequency: [BPM]</string>

    <!--ExerciseViewActivity-->
    <string name="ExerciseViewActivityTitle" translatable="false">ExerciseViewActivity</string>

    <string name="WarmUpExerciseInfoIntensity">Intensity: %1$s</string>
    <string name="WarmUpExerciseInfoSubIntensity">"Sub-Intensity: %1$d"</string>

    <string name="DeviceExerciseInfoSeatPosition">"Seat: %1$d"</string>
    <string name="DeviceExerciseInfoFootPosition">"Foot: %1$d"</string>
    <string name="DeviceExerciseInfoAnglePosition">"Angle: %1$d"</string>
    <string name="DeviceExerciseInfoWeight">Weight: %1$f kg</string>
    <string name="DeviceExerciseInfoAdditionalWeight" translatable="false"> + %1$f</string>
    <string name="DeviceExerciseInfoBackPosition">"Back: %1$d"</string>
    <string name="DeviceExerciseInfoDeviceNumber">"Device Number: %1$d"</string>


    <string name="title_activity_edit_exercise">Edit Exercise</string>
    <string name="ScheduleInfo">Repetitions: %1$d \nPause: %2$d s\nSets: %3$d \nSpeed: %4$d\n Trainings Type: %5$s</string>
    <string name="WarmUpExerciseInfoExecutionTime">"Execution Time: %1$d "</string>
    <string name="WarmUpExerciseInfoBPM">"Heart Frequency: %1$d BPM "</string>
    <string name="DeviceExerciseInfoLegPosition">"Leg: %1$d "</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
</resources>
