<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScheduleView.GeneralTrainingScheduleEditor"
    tools:showIn="@layout/activity_general_training_schedule_editor">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ScheduleNameHint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TrainingsTypeTextView" />

            <Spinner
                android:id="@+id/trainSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ScheduleType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RepetitionsTextView" />

            <EditText
                android:id="@+id/repEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PauseTextView" />

            <EditText
                android:id="@+id/pauseEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SetsTextView" />

            <EditText
                android:id="@+id/setEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MovementSpeedTextView" />

            <EditText
                android:id="@+id/speedEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScheduleColorLabel"/>

            <com.thebluealliance.spectrum.SpectrumPalette
                android:id="@+id/ScheduleColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spectrum_autoPadding="true"
                app:spectrum_outlineWidth="2dp"
                app:spectrum_colors="@array/ChoosableColors" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>